# triplets

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CLEANUP_PLAN.md  CYTHON_PERFORMANCE_IDEAS.md  MANIFEST.in  Pipfile  RDF_DATAFRAME_IMPLEMENTATION_GUIDE.md  README.md  SHACL_QUICKSTART.md  TARGET_ARCHITECTURE.md  benchmark_export.py  benchmark_parsers.py  benchmark_queries.py  benchmark_shacl.py  benchmark_sparql_engines.py  create_dlr_usecase.py  cross_check_shacl.py  generate_cgmes_prof.py  genindex.html  index.html  modules.html  objects.inv  pixi.toml  polars_benchmark_results.txt  py-modindex.html  pyproject.toml  quickstart.html  run_test_usecases.py  search.html  searchindex.js  setup.cfg  setup.html  setup.py  setup_cython.py  setup_cython_export.py  setup_cython_parser.py  setup_dev_env.sh  (+21 more)
.github/workflows/: build-wheels.yml  generate-documentation.yaml  python-publish.yml
0.1.0/: genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  triplets.cgmes_tools.html  triplets.cli.html  triplets.export.html  triplets.export_schema.html  triplets.html  triplets.parser.html  triplets.rdf_parser.html  triplets.rdfs_tools.html  triplets.tools.html
0.1.0/_modules/: index.html
0.1.0/_sources/: quickstart.md.txt  triplets.export_schema.rst.txt  triplets.rdf_parser.rst.txt
0.1.0/guides/: building.html  exports.html  migration_0.0_to_0.1.html  parsers.html  testing.html
0.1.0rc2/: genindex.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  triplets.cgmes_tools.html  triplets.cli.html  triplets.export.html  triplets.html  triplets.parser.html  triplets.rdf_parser.html  triplets.rdfs_tools.html
0.1.0rc2/_modules/: index.html
0.1.0rc2/_sources/: triplets.export.rst.txt
0.1.0rc2/guides/: parsers.html
0.1.0rc3/: genindex.html  index.html  py-modindex.html  quickstart.html  search.html  triplets.cgmes_tools.html  triplets.cli.html  triplets.export.html  triplets.export_schema.html  triplets.html  triplets.parser.html  triplets.rdf_parser.html  triplets.rdfs_tools.html  triplets.tools.html
0.1.0rc3/_modules/: index.html
0.1.0rc3/_sources/: index.rst.txt
0.1.0rc3/_static/: custom.css
0.1.0rc3/guides/: building.html  migration_0.0_to_0.1.html  parsers.html  testing.html
0.1.0rc4/: genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  triplets.cgmes_tools.html  triplets.cli.html  triplets.export.html  triplets.export_schema.html  triplets.html  triplets.parser.html  triplets.rdf_parser.html  triplets.rdfs_tools.html  triplets.tools.html
0.1.0rc4/_modules/: index.html
0.1.0rc4/guides/: building.html  migration_0.0_to_0.1.html  parsers.html  testing.html
0.1.0rc5/: genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  triplets.cgmes_tools.html  triplets.cli.html  triplets.export.html  triplets.export_schema.html  triplets.html  triplets.parser.html  triplets.rdf_parser.html  triplets.rdfs_tools.html  triplets.tools.html
_modules/: index.html  versioneer.html
_sources/: index.rst.txt  triplets.cgmes_tools.rst.txt  triplets.rdfs_tools.rst.txt
_static/: documentation_options.js
docs/: building.md  exports.md  generate_documentation.sh  migration.md  migration_0.0_to_0.1.md  parsers.md  testing.md
documents/: dataframe_performance.json  dataframe_performance_nocat.json  mmap_benchmark_cython_pugixml.json  parsers_performance.json  realgrid_mmap_benchmark.json  tools_baseline_performance.json
examples/: cim-diff.py
latest/: index.html  triplets.cgmes_tools.html  triplets.cli.html  triplets.export.html  triplets.export_schema.html  triplets.html  triplets.parser.html  triplets.tools.html
rdf_parser_rust/: Cargo.toml  pyproject.toml
rdf_parser_rust/src/: lib.rs
rdf_tools/: __init__.py  _version.py  cgmes_tools.py  rdf_parser.py  rdfs_tools.py
tests/: _parity.py  conftest.py  test_api_surface.py  test_benchmarks_realgrid.py  test_cgmes_tools.py  test_duckdb.py  test_engine_parity.py  test_export.py  test_import.py  test_parity_cgmes_tools.py  test_parity_export.py  test_parity_parser.py  test_parity_tools.py  test_parser.py  test_parser_backends.py  test_performance.py  test_rdfs_tools.py  test_sparql.py  test_tools.py  test_type_tableview.py  test_validation.py
tools/: cim-diff.py  cim-spreadsheet.py  convert_excel_to_rdf.py  excel_to_rdf.py
triplet_tools/: __init__.py  _version.py  cgmes_tools.py  rdfs_tools.py
triplets/: __init__.py  _accessor.py  _engine_detect.py  _rdflib_loader.py  _version.py  cgmes_tools.py  cim_spreadsheet.py  cimxml_export_arrow_pugixml_wrapper.py  cimxml_export_cython.pyx  cimxml_export_cython_wrapper.py  cimxml_export_lxml_optimized.py  cimxml_export_polars.py  cimxml_export_pugixml.pyx  cimxml_export_pugixml_wrapper.py  cimxml_export_string.py  duckdb_engine.py  fast_queries.py  polars_queries.py  rdf_extract_cython.pyx  rdf_extract_cython_arrow.pyx  rdf_extract_lxml_arrow.pyx  rdf_parser.py  rdf_parser_arrow.py  rdf_parser_cython.py  rdf_parser_cython_arrow.py  rdf_parser_expat.py  rdf_parser_lxml_arrow.py  rdf_parser_lxml_tuned.py  rdf_parser_polars_clean.py  rdf_parser_pugixml.py  rdf_parser_pygixml.py  rdf_parser_pygixml_tuned.py  rdfs_tools.py
(+266 files in other folders)
