[project]
name = "triplets"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # pandas 2.2.x excluded: pivot() on ArrowDtype dictionary columns crashes with
    # "'Series' object has no attribute '_pa_array'" (fixed upstream in 2.3)
    "pandas>=2.0,!=2.2.*",
    "lxml>=4.9",
    "aniso8601",
]

[project.scripts]
cim-spreadsheet = "triplets.cli.cim_spreadsheet:main"
cim-diff = "triplets.cli.cim_diff:main"

[project.optional-dependencies]
arrow = [
    "pyarrow>=14.0",
]
polars = [
    "polars>=1.0",
    "pyarrow>=14.0",
]
excel = [
    "openpyxl>=3.1.5",
]
networkx = [
    "networkx>=3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-xdist",
    "polars>=1.0",
    "pyarrow>=14.0",
    "networkx>=3.0",
    "openpyxl>=3.1.5",
    "rdflib>=7.6.0",
]
# vis-network JS is vendored in triplets/cgmes_tools/static — graph drawing needs no extra deps
visualization = [
    "networkx>=3.0",
]
docs = [
    "furo>=2025.12.19",
    "myst-parser>=5.1.0",
    "sphinx>=9.0.4",
    "sphinx-multiversion>=0.2.4",
]
duckdb = [
    "duckdb>=1.5.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "performance: marks performance tests (run with '-m performance')",
    "requires_perf_backend: needs the compiled cython_pugixml extension",
]

[tool.uv]
exclude-newer = "P14D"

[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "versioneer",
    "Cython>=3.0; platform_system != 'Emscripten'",
    "pyarrow>=14.0; platform_system != 'Emscripten'",
    "numpy; platform_system != 'Emscripten'",
]
build-backend = "setuptools.build_meta"

[tool.uv.extra-build-dependencies]
triplets = ["versioneer", "setuptools"]

# Note: version is managed by versioneer in setup.py (derives from git tags).
# The cython_pugixml perf backend is built into published wheels via cibuildwheel
# (see .github/workflows/build-wheels.yml). For local dev: pixi or setup_cython_parser.py.
