[package]
name = "rdf_parser_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "rdf_parser_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
quick-xml = "0.37"
arrow-array = "58"
arrow-schema = "58"
pyo3-arrow = "0.17"
uuid = { version = "1", features = ["v4"] }
rayon = "1.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
